src/pages/About.css
.about {
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.face {
  width: 30%;
  margin-left: 10%;
  min-height: 300px;
}

.face img {
  width: 100%;
}

.bio {
  display: flex;
  justify-content: space-around;
  flex-direction: column;
  width: 40%;
  margin-right: 10%;
}

.bio .links ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.bio .links ul li {
  display: inline-block;
  margin-right: 1.5rem;
}

.bio .links ul li img {
  height: 40px;
  fill: red;
}

.bio .links ul li:last-child {
  margin-right: 0;
}

.email {
  margin-bottom: 3rem;
}

.email a {
  color: #00f;
}

@media only screen and (max-width: 992px) {
  .email {
    margin-bottom: 0;
  }
}

@media only screen and (max-width: 767px) {
  .about {
    width: 80%;
    padding: 0 2rem;
    flex-direction: column;
    align-items: center;
  }

  .face {
    max-width: 200px;
    min-height: 0;
    width: 60%;
    margin: 0;
    margin-bottom: 3rem;
  }

  .bio {
    width: 100%;
    text-align: center;
    margin-left: 0;
    margin-right: 0;
  }

  .bio .links ul li img {
    height: 30px;
  }
}

footer {
  text-align: center;
  width: 100%;
  position: absolute;
  bottom: 0;
  padding: 1rem;
}

